# Syntri_iem

./: .gitignore  LICENSE  README.md  add_asio_integration.bat
syntri/: CMakeLists.txt  README.md  build_with_logs.bat  foundation_setup.bat  interface_test_log.txt
syntri/include/syntri/: asio_interface.h  audio_interface.h  types.h
syntri/src/core/: audio_interface.cpp
syntri/src/hardware/: asio_interface.cpp
syntri/test/: asio_diagnostic.cpp  asio_hardware_test.cpp  asio_test.cpp  basic_test.cpp  comprehensive_test.cpp  interface_test.cpp
